--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,102 +1,116 @@
-@media (min-width: 992px) {
-
-    body.login {
-        min-height: 100vh;
-        height: auto;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    #login {
-        padding: 0;
-        transform: translateY(-100px);
-    }
+:root {
+    --mb-blue: #2e72b8;
+    --mb-blue-darken: #255b93;
+    --mb-green: #679f37;
+    --mb-yellow: #fbc02d;
+    --mb-red: #fb2d34;
 }
 
-@media (max-width: 375px) {
-    #login {
-        margin-left: 10px;
-        margin-right: 10px;
-        width: calc(100% - 20px);
-    }
+body.login {
+    font-family: Roboto, sans-serif;
+    line-height: 1.2;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
-#login {
-    max-width: 100%;
+body.login a {
+    color: var(--mb-blue);
+    transition: 0.3s ease-in-out;
+    outline: 0;
 }
 
-#login h1 {
-    margin-bottom: 16px;
+body.login a:hover, body.login a:focus, body.login a a:active {
+    color: var(--mb-blue-darken);
+    box-shadow: none;
 }
 
-#login h1 a {
-    background-image: url('../images/logo-color.svg') !important;
-    background-repeat: no-repeat;
+body.login h1 a {
+    background: url("../img/logo-color.svg") no-repeat center;
     background-size: contain;
-    background-position: center center;
-    margin-bottom: 0;
-    height: 84px;
-    width: 84px;
+    margin-bottom: 1rem;
+    width: auto;
+    max-width: 100%;
+    height: 60px;
 }
 
-*:focus {
-    border: 0 !important;
-    box-shadow: 0 0 0 0 transparent !important;
-    outline: 0 solid transparent !important;
+body.login form {
+    margin-top: 0;
 }
 
-#login form {
-    background: transparent;
-    box-shadow: none;
+body.login #nav {
     padding: 0;
-    margin-bottom: 15px;
-    border: 0;
+    margin-top: 1rem;
 }
 
-#login form.shake {
-    animation-iteration-count: 0 !important;
+body.login #nav > a {
+    display: flex;
+    text-decoration: none;
+    font-size: 13px;
+    line-height: 1;
+    padding: 6px 12px;
+    cursor: pointer;
+    border: 1px solid #5A5A5A;
+    background-color: #5A5A5A;
+    transition: 0.2s ease-in-out;
+    color: #fff;
+    border-radius: 3px;
+    white-space: nowrap;
+    box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 0.5rem;
+    min-height: 32px;
 }
 
-#login form input {
-    border-radius: 0;
+body.login #nav > a:hover {
+    border: 1px solid #000;
+    background-color: #000;
+    transition: 0.2s ease-in-out;
+    color: #fff;
 }
 
-#login form input[type=text],
-#login form input[type=password] {
-    background: transparent;
+body.login #nav > a:focus {
+    color: #fff;
     box-shadow: none;
-    border: 0;
-    border-bottom: 1px solid;
-    padding-left: 0;
 }
 
-#login form input[type=text]:focus,
-#login form input[type=password]:focus {
-    outline: none;
-    box-shadow: none;
-    border-bottom: 2px solid #2e72b8 !important;
+body.login .button.button-primary {
+    background: var(--mb-blue);
+    border-color: var(--mb-blue);
+    color: #fff;
+    transition: 0.2s ease-in-out;
 }
 
-#login form input[type=submit] {
-    background-color: #2e72b8;
-    border-color: #2e72b8;
+body.login .button.button-primary:hover,
+body.login .button.button-primary:active {
+    transition: 0.2s ease-in-out;
+    background: var(--mb-blue-darken);
+    border-color: var(--mb-blue-darken);
 }
 
-#login .dashicons {
-    color: #2e72b8;
+body.login .forgetmenot {
+    line-height: 32px;
 }
 
-#login #nav, #login #backtoblog {
-    margin: 0;
+body.login #backtoblog {
     padding: 0;
-    display: inline-block;
 }
 
-#login #nav {
-    float: right;
+body.login .message, body.login .success, body.login #login_error {
+    border-left: 4px solid var(--mb-blue);
+    padding: 12px;
+    margin-left: 0;
+    margin-bottom: 20px;
+    background-color: #fff;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.3);
+    word-wrap: break-word;
 }
 
-#login #backtoblog {
-    float: left;
+body.login .success {
+    border-left-color: var(--mb-green);
+}
+
+body.login #login_error {
+    border-left-color: var(--mb-red);
 }
